--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -2,6 +2,8 @@
     display:flex;
     justify-content:space-between;
     padding: 25px;
+    margin-left: var(--horizontal-space);
+    margin-bottom: 15px;
 }
 
 .screen-header__title{
@@ -12,5 +14,5 @@
 }
 
 .screen-header__icons span{
-    margin-left: 25px;
+    margin-left:25px;
 }
