--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
+@import "components/user-component.css";
+@import "components/badge.css";
 /* screens */
 @import "screens/login.css";
 @import "screens/friends.css";
@@ -16,3 +18,6 @@ body{
     font-family: "Open Sans", sans-serif;
 }
 
+.main-screen{
+    padding: 0px var(--horizontal-space)
+}
