--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen{
     background-color: #abc1d1;
-    height: 1000vh;
+    height: 100vh;
 }
 
 #chat-screen .alt-header,
@@ -22,11 +22,23 @@
     z-index:1;
 }
 
+@keyframes fadeIn {
+    from{
+        transform: translateY(10px);
+        opacity:0;
+    }
+    to{
+        transform: none;
+        opacity: 1;
+    }
+}
+
 .main-chat{
-    margin-top:120px;
+    margin-top:130px;
     display:flex;
     flex-direction:column;
     align-items: center;
+    animation: fadeIn 1s ease-in-out;
 }
 
 .chat__timestamp{
@@ -88,4 +100,102 @@
     border-top-right-radius: 0px;
     border-top-left-radius: 15px;
     margin-right:0px;
-    margin-left:5px;}
+    margin-left:5px;
+}
+
+.reply {
+    position:fixed;
+    bottom:0px;
+    width:100%;
+    box-sizing: border-box;
+    background-color:white;
+    display:flex;
+    justify-content: space-between;
+    padding: 5px 25px;
+    align-items:center;
+    transition: all 0.5s ease-in-out;
+}
+
+
+.reply input{
+    padding: 14px;
+    width:100%;
+    border: var(--main-border);
+    border-radius: 25px;
+    box-sizing:border-box;
+    transition: all 0.3s ease-in-out;
+}
+
+
+.reply i{
+    opacity: 0.5;
+}
+
+.reply .reply__column:first-child{
+    width:10%
+}
+.reply .reply__column:last-child{
+    width:90%;
+    position:relative;
+
+}
+
+.reply__column:last-child input{
+    width:100%;
+    border:var(--main-border);
+    border-radius:20px;
+    padding: 14px;
+    box-sizing: border-box;
+}
+
+
+.reply__column:last-child > i,
+.reply__column:last-child button{
+    position:absolute;
+    right:3px;
+    top: 3px;
+}
+
+.reply__column:last-child > i{
+    right: 50px;
+    top:15px
+}
+
+.reply__column button{
+    background-color:var(--yellow);
+    border:none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.reply__column button i{
+    opacity: 1;
+}
+
+.reply__column button:focus,
+.reply__column button:active{
+    outline:none;
+}
+
+
+.reply .reply__column:first-child,
+.reply .fa-smile,
+.reply button {
+ transition: opacity 0.3s ease-in-out;   
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-smile,
+.reply:focus-within button {
+    opacity:0;}
+
+.reply:focus-within input {
+        width:96svw;
+        transform:translateX(-13%) translateY(-80px);
+        background-color: var(--yellow)
+}
+
+.reply:focus-within{
+    transform: translateY(80px);
+}
