--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -97,6 +97,26 @@ position:relative;
     font-size: 12px;
 }
 
+
+
 .open-post__heart-count span{
     margin-left:3px;
+}
+
+@keyframes heartBeat{
+    0%{
+color:white;
+    }
+    50%{
+        transform:scale(1.5);
+color:tomato;
+    }
+    100%{
+color:white;
+    }
+}
+
+.open-post__heart-count:hover i {
+    will-change:transform;
+    animation: heartBeat 2s linear infinite;
 }
