--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -1,4 +1,4 @@
-.no-mobile{
+#no-mobile{
     position:absolute;
     z-index:99;
     height:100vh;
@@ -13,7 +13,7 @@ font-size:32px;
 
 
 @media screen and (max-width:640px){
-    .no-mobile{
+    #no-mobile{
         display:none;
     }
 }
