--- a/css/components/icon-row.css
+++ b/css/components/icon-row.css
@@ -1,12 +1,18 @@
 .icon-row{
     display:flex;
-    justify-content:space-between;
+    width:100%;
+    flex-wrap:wrap;
 }
 
 .icon-row__icon{
     display:flex;
     flex-direction: column;
     align-items:center;
+}
+
+.icon-row .number8{
+    width:25%;
+    margin-bottom:20px;
 }
 
 .icon-row__icon i{
